# CareerAI

./: .env.example  .gitignore  AGENTS.md  BUSINESS_FLOW_CODE_GUIDE.md  NOTICE.md  README.md
agent-service/: .env.example  README.md  pyproject.toml
agent-service/src/careerai_agent/: __init__.py  config.py  logging.py  main.py
agent-service/src/careerai_agent/api/: dependencies.py  routes.py
agent-service/src/careerai_agent/clients/: __init__.py  careerai.py
agent-service/src/careerai_agent/domain/: __init__.py  models.py
agent-service/src/careerai_agent/graph/: builder.py  interview.py  interview_creation.py  state.py
agent-service/src/careerai_agent/models/: __init__.py  config.py  config_client.py  factory.py
agent-service/src/careerai_agent/persistence/: __init__.py  checkpointer.py
agent-service/src/careerai_agent/services/: blueprint.py  decision.py  interview.py  planner.py  runs.py
agent-service/src/careerai_agent/tools/: __init__.py  business.py  client.py  models.py
agent-service/tests/: test_api.py  test_business_tool_client.py  test_interview_blueprint.py  test_model_factory.py
backend/: .sdkmanrc  pom.xml
backend/agent-service/: README.md  pom.xml
backend/careerai-app/: pom.xml
backend/careerai-shared/: pom.xml
backend/gateway-service/: pom.xml
backend/interview-service/: pom.xml
backend/job-service/: pom.xml
docs/: CareerAI-Agent化改造方案.md  CareerAI-改造工作清单.md  PROJECT-CLOSEOUT.md  database-boundaries.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: dev-start.sh  smoke-test.sh
(+466 files in other folders)
