[project]
name = "careerai-agent-service"
version = "0.1.0"
description = "Goal-driven business orchestration service for CareerAI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "langchain>=1.0,<2.0",
  "langchain-openai>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-postgres>=3.0,<4.0",
  "psycopg[binary,pool]>=3.3,<4.0",
  "pydantic-settings>=2.10,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
  "ruff>=0.12,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careerai_agent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["careerai_agent"]
